fix map translate

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -81,8 +81,8 @@ body {
 	display: none;
 }
 
-@media (max-width: 767.98px) {
-	.leaflet-pane.leaflet-map-pane {
-		transform: translate3d(171px, 0px, 0px) !important;
-	}
-}
+// @media (max-width: 767.98px) {
+// 	.leaflet-pane.leaflet-map-pane {
+// 		transform: translate3d(171px, 0px, 0px) !important;
+// 	}
+// }
