--- a/src/components/content/Content.module.scss
+++ b/src/components/content/Content.module.scss
@@ -10,6 +10,11 @@
 		width: 100%;
 		position: relative;
 
+		@media (max-width: 767.98px) {
+			height: 100%;
+			position: fixed;
+		}
+
 		> .logo__image {
 			position: absolute;
 			bottom: 4%;
