--- a/src/assets/styles/_functions.scss
+++ b/src/assets/styles/_functions.scss
@@ -1,3 +1,7 @@
 @function adapt($size, $screen) {
 	@return calc($size / $screen * 100vw);
 }
+
+@function test($size, $screen) {
+	@return ($size / $screen) * 100%;
+}
