--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -80,3 +80,17 @@ body {
 .leaflet-control-attribution.leaflet-control {
 	display: none;
 }
+.my-custom-icon {
+	border-radius: 50%;
+	display: flex !important;
+	align-items: center;
+	justify-content: center;
+}
+.my-custom-icon_target {
+	box-shadow: 0 0 20px rgba(135, 78, 175, 1);
+	background: rgba(135, 78, 175, 0.6);
+	border-radius: 50%;
+	display: flex !important;
+	align-items: center;
+	justify-content: center;
+}
